# py-sdk

./: .env.example  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  general_feedback_question.yml
.github/workflows/: ci.yml  integration.yml  publish.yml  pull-request.yml  release-please.yml  verify.yml
docs/: sdk-direction.md
examples/: README.md  create_limit_order.py  create_market_order.py  fetch_market.py  list_markets.py  list_positions.py  market_prices.py  pagination.py  search.py
examples/lib/: env.py  markets.py  tables.py
src/polymarket/: __init__.py  _frames_bridge.py  _jupyter.py  auth.py  calls.py  client.py  environments.py  errors.py  models.py  pagination.py  perps.py  rfq.py  transactions.py  types.py  version.py
src/polymarket/_internal/: context.py  data_params.py  dispatch.py  gamma_paths.py  hmac.py  l1_auth.py  pagination.py  perps_session.py  request.py  rfq.py  validation.py  wallet.py
src/polymarket/_internal/actions/: _cursor.py  account.py  auth.py  builders.py  clob.py  data.py  gamma.py  rewards.py  rfq.py
src/polymarket/_internal/actions/orders/: _numeric.py  allowance.py  cancel.py  context.py  estimate.py  limit.py  market.py  market_data.py  math.py  orders.py  place.py  post.py  typed_data.py  types.py
src/polymarket/_internal/actions/perps/: account.py  credentials.py  funds.py  paging.py  public.py  signing.py  trading.py
src/polymarket/_internal/actions/relayer/: approvals.py  auth.py  calls.py  deployed.py  gasless.py  nonce.py  poll.py  positions.py  submit.py
src/polymarket/_internal/actions/relayer/signing/: deposit_wallet.py  proxy.py  safe.py
src/polymarket/_internal/eoa/: broadcast.py  rpc.py
src/polymarket/_internal/streams/: handle.py  merged_handle.py  reconnect.py  registry.py
src/polymarket/_internal/streams/clob/: heartbeat.py  market.py  market_protocol.py  user.py  user_protocol.py
src/polymarket/_internal/streams/perps/: heartbeat.py  market.py  market_protocol.py
src/polymarket/_internal/streams/rtds/: heartbeat.py  manager.py  protocol.py
src/polymarket/_internal/streams/sports/: heartbeat.py  manager.py
src/polymarket/_internal/ws/: __init__.py  backoff.py  connection.py  heartbeat.py
src/polymarket/clients/: __init__.py  _gamma_requests.py  _market_requests.py  _markets.py  _transport.py  async_public.py  async_secure.py  public.py  secure.py
src/polymarket/frames/: __init__.py  _arrow.py  _builtin_overrides.py  _errors.py  _overrides.py  _pandas.py  _polars.py
src/polymarket/models/: __init__.py  base.py  market.py  rfq.py  rtds_events.py  sports_events.py  types.py
src/polymarket/models/clob/: __init__.py  _validators.py  account.py  api_key.py  builder.py  cancel.py  last_trade.py  market_events.py  order_book.py  order_response.py  orders.py  price_history.py  relayer.py  requests.py  rewards.py  user_events.py
src/polymarket/models/data/: __init__.py  activity.py  analytics.py  leaderboard.py  market_positions.py  portfolio.py
src/polymarket/models/gamma/: __init__.py  comment.py  common.py  event.py  market.py  profile.py  search.py  series.py  tag.py
src/polymarket/models/perps/: __init__.py  _validators.py  account.py  credentials.py  events.py  funds.py  market.py  orders.py  requests.py  results.py  types.py
src/polymarket/streams/: __init__.py  _accessor.py  _router.py  _specs.py
tests/integration/: README.md  conftest.py  test_builder_attribution.py  test_builder_attribution_live.py  test_clob.py  test_clob_auth.py  test_clob_market_stream.py  test_clob_orders.py  test_clob_reads.py  test_clob_rewards.py  test_comments.py  test_data.py  test_data_paginated.py  test_events.py  test_gamma_paginated.py  test_markets.py  test_perps.py  test_profiles.py  test_public_client.py  test_relayer_approve_live.py  test_relayer_gasless_live.py  test_rfq.py  test_rfq_paginated.py  test_rtds_stream.py  test_series.py  test_sports.py  test_sports_stream.py  test_tags.py  test_user_stream.py  test_ws_connection_shutdown.py
tests/unit/: _relayer_helpers.py  test_account_actions.py  test_account_models.py  test_account_transport.py  test_api_key_creds.py  test_auth_actions.py  test_auth_transport.py  test_bootstrap_credentials.py  test_builder_attribution.py  test_builder_trades.py  test_client.py  test_client_request_params.py  test_clob_actions.py  test_clob_transport.py  test_clob_transport_sync.py  test_data_activity.py  test_data_models.py  test_data_paginated_specs.py  test_data_requests.py  test_data_specs.py  test_date_field_contract.py  test_date_filter_params.py  test_decimal_field_contract.py  test_end_authentication.py  test_eoa_broadcast.py  test_eoa_position_workflows.py  test_eoa_rpc.py  test_errors.py  test_factory_beacon_detection.py  test_frames_arrow.py  test_frames_missing_deps.py  test_frames_order_book.py  test_frames_overrides.py  test_frames_paginator.py  test_frames_pandas.py  test_frames_polars.py  test_gamma_common_parsers.py  test_gamma_models.py  test_gamma_paginated_specs.py  test_gamma_paths.py  (+95 more)
