[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "polymarket-sdk"
version = "0.1.0"
description = "Official Python SDK for Polymarket"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Polymarket Engineering", email = "engineering@polymarket.com" },
]
maintainers = [
  { name = "Polymarket Engineering", email = "engineering@polymarket.com" },
]
keywords = ["polymarket", "prediction-markets", "sdk", "trading", "web3"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "eth-abi>=5,<6",
  "eth-account>=0.13,<1",
  "eth-utils>=4,<6",
  "httpx[http2]>=0.27,<1",
  "pydantic>=2,<3",
]

[project.optional-dependencies]
websocket = ["websockets>=12,<16"]

[project.urls]
Homepage = "https://polymarket.com"
Documentation = "https://docs.polymarket.com"
Repository = "https://github.com/Polymarket/polymarket-python"
Issues = "https://github.com/Polymarket/polymarket-python/issues"

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=6,<7",
  "respx>=0.22,<1",
  "ruff>=0.11,<1",
  "pyright>=1.1,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "integration: tests that call live Polymarket services or require credentials",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
